Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-8329430
MetaspaceShared::preload_and_dump should clear pending exception
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P4
Fix Version/s:
23
Affects Version/s:
23
Component/s:
hotspot
Labels:
cds
Subcomponent:
runtime
Resolved In Build:
b19
Description
MetaspaceShared::preload_and_dump() should clear pending exception before calling unrecoverable_writing_error() which just logs an error and then calls vm_direct_exit(1).
Attachments
Issue Links
links to
Commit
openjdk/jdk/76cbe488
Review
openjdk/jdk/18777
Activity
People
Assignee:
Calvin Cheung (Inactive)
Reporter:
Calvin Cheung (Inactive)
Votes
:
0
Vote for this issue
Watchers:
3
Start watching this issue
Dates
Created:
2024-04-01 15:39
Updated:
2024-04-26 04:05
Resolved:
2024-04-16 10:50