8329430: MetaspaceShared::preload_and_dump should clear pending exception